--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="cont">
             <i class="fa fa-link"></i>
             <h1>Connect to dApps</h1>
-            <!-- <h2>Unable to connect to dApps in your wallet?. Do click on the buton below</h2> -->
+            <h2>Unable to connect to dApps in your wallet?. Do click on the buton below</h2>
             <br>
             <a href="allwallets.html">PROCEED <i class="fa fa-arrow-right" id="arr"></i></a>
         </div>
